--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~10.0.8",
     "@angular/router": "~10.0.8",
     "angular": "^1.8.0",
+    "moment": "^2.27.0",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
