--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~10.0.8",
     "@angular/platform-browser-dynamic": "~10.0.8",
     "@angular/router": "~10.0.8",
+    "@angular/service-worker": "~10.0.8",
     "angular": "^1.8.0",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
